# choretracker

./: resetenv.sh
app/: AndroidManifest.xml  local.properties
app/res/layout/: chores_view.xml  create_chore.xml  create_group.xml  join_group_activity.xml  join_group_list_item.xml  main.xml  signup.xml
app/res/menu/: get_chores_menu.xml  join_group_menu.xml
app/res/values/: strings.xml
app/src/com/example/ChoreTracker/: ApiCallBuilder.java  ChoreTrackerApp.java  CreateChoreAsync.java  DailyChoreNotificationService.java  DeleteChoresAsync.java  GetChoresActivity.java  GetGroupsAsyncTask.java  GetHouseMatesAsync.java  GetJoinableGroupsAsync.java  Home.java  JoinGroupActivity.java  JoinGroupAsync.java  LoginAsync.java  SignUp.java  SignUpAsyncTask.java
env/local/: bin  include  lib
hserver/choremaster/: choremaster.cabal  devel.hs
hserver/choremaster/config/: keter.yml  sqlite.yml
hserver/choremaster/deploy/: Procfile
scotty_server/: '  app.hs  chore_tracker.cabal  test.hs
server/: app.py  create_database.py  sqli.py
server/data/: db.db  db.db-journal  schema.sql
server/static/: ChoreTracker.apk  keystore
